--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="password">Password</string>
     <string name="email">  Email</string>
     <string name="uni_text">Air University Bus Tracking System</string>
-    <string name="registerhere">Don\'t have an account?</string>
+    <string name="registerhere">New user?</string>
     <string name="forgot_password">Forgot password?</string>
+    <string name="SignUp">SIGN UP</string>
 </resources>
